@@ -253,55 +253,57 @@ sub p3p_tags {
     return;
 }
 
-sub each {
-    my $self   = shift;
-    my $code   = shift;
-    my $header = $header{ refaddr $self };
-    my %copy   = %{ $header };
+sub flatten {
+    my $self         = shift;
+    my $is_recursive = defined $_[0] ? shift : 1;
+    my $header       = $header{ refaddr $self };
+    my %copy         = %{ $header };
 
-    croak 'Must provide a code reference to each()' if ref $code ne 'CODE';
+    my @headers;
 
     my ( $cookie, $expires, $nph, $status, $target )
         = delete @copy{qw/-cookie -expires -nph -status -target/};
 
-    $code->( 'Server', $ENV{SERVER_SOFTWARE} || 'cmdline' ) if $nph;
-    $code->( 'Status', $status ) if $status;
-    $code->( 'Window-Target', $target ) if $target;
+    push @headers, 'Server', $ENV{SERVER_SOFTWARE} || 'cmdline' if $nph;
+    push @headers, 'Status', $status if $status;
+    push @headers, 'Window-Target', $target if $target;
 
     if ( my $tags = delete $copy{-p3p} ) {
         $tags = join ' ', @{ $tags } if ref $tags eq 'ARRAY';
-        $code->( 'P3P', qq{policyref="/w3c/p3p.xml", CP="$tags"} );
+        push @headers, 'P3P', qq{policyref="/w3c/p3p.xml", CP="$tags"};
     }
 
-    if ( ref $cookie eq 'ARRAY' ) {
-        my @cookies = @{ $cookie }; # copy
-        $code->( 'Set-Cookie', $_ ) for @cookies;
+    if ( ref $cookie eq 'ARRAY' and $is_recursive ) {
+        push @headers, map { ('Set-Cookie', $_) } @{ $cookie };
     }
     elsif ( $cookie ) {
-        $code->( 'Set-Cookie', $cookie );
+        push @headers, 'Set-Cookie', $cookie;
     }
 
-    $code->( 'Expires', CGI::Util::expires($expires) ) if $expires;
-    $code->( 'Date', CGI::Util::expires() ) if $expires or $cookie or $nph;
+    push @headers, 'Expires', CGI::Util::expires($expires) if $expires;
 
-    if ( my $file = delete $copy{-attachment} ) {
-        $code->( 'Content-Disposition', qq{attachment; filename="$file"} );
+    if ( $expires or $cookie or $nph ) {
+        push @headers, 'Date', CGI::Util::expires();
+    }
+
+    if ( my $fn = delete $copy{-attachment} ) {
+        push @headers, 'Content-Disposition', qq{attachment; filename="$fn"};
     }
 
     my ( $type, $charset ) = delete @copy{qw/-type -charset/};
 
     # not ordered
     while ( my ($norm, $value) = each %copy ) {
-        $code->( _ucfirst($norm), $value );
+        push @headers, _ucfirst( $norm ), $value;
     }
 
     if ( !defined $type or $type ne q{} ) {
-        $type ||= 'text/html';
-        $type .= "; charset=$charset" if $type !~ /\bcharset\b/ and $charset;
-        $code->( 'Content-Type', $type );
+        my $ct = $type || 'text/html';
+        $ct .= "; charset=$charset" if $charset && $ct !~ /\bcharset\b/;
+        push @headers, 'Content-Type', $ct;
     }
 
-    return;
+    @headers;
 }
 
 sub _ucfirst {
@@ -311,31 +313,40 @@ sub _ucfirst {
     $str;
 }
 
-sub field_names {
-    my $self = shift;
+sub each {
+    my ( $self, $callback ) = @_;
 
-    my %seen; # Set-Cookie header may be multi-valued
-    my @fields;
-    $self->each(sub {
-        my $field = shift;
-        push @fields, $field unless $seen{$field}++;
-    });
+    if ( ref $callback eq 'CODE' ) {
+        my @headers = $self->flatten;
+        while ( my ($field, $value) = splice @headers, 0, 2 ) {
+            $callback->( $field, $value );
+        }
+    }
+    else {
+        croak 'Must provide a code reference to each()';
+    }
 
-    @fields;
+    return;
 }
 
-sub flatten {
-    my $self = shift;
+#sub field_names {
+#    my $self    = shift;
+#    my @headers = $self->flatten(0);
 
-    my @headers;
-    $self->each(sub {
-        my ( $field, $value ) = @_;
-        $value = $value->as_string if ref $value eq 'CGI::Cookie';
-        push @headers, $field, $value;
-    });
+#    if ( my $size = @headers ) {
+#        return @headers[ map { $_ * 2 } 0 .. $size/2-1 ];
+#    }
 
-    @headers;
-}
+#    return;
+#}
+
+#sub field_names {
+#    my $self = shift;
+#    my %headers = $self->flatten(0);
+#    keys %headers;
+#}
+
+sub field_names { keys %{{ $_[0]->flatten(0) }} }
 
 sub as_string {
     my $self   = shift;
@@ -746,29 +757,44 @@ Any return values of the callback routine are ignored.
 
 =item @headers = $header->flatten
 
+=item @headers = $header->flatten( $is_recursive )
+
 Returns pairs of fields and values. 
+This method flattens the Set-Cookie headers recursively by default.
+The optional C<$is_recursive> argument determines
+whether to flatten them recursively.
 
-  my @headers = $header->flatten;
-  # => ( 'Content-length', '3002', 'Content-Type', 'text/plain' )
+  my $header = CGI::Header->new( -cookie => ['cookie1', 'cookie2'] );
 
-It's identical to:
+  $header->flatten;
+  # => ( 'Set-Cookie' => 'cookie1', 'Set-Cookie' => 'cookie2', ... )
 
-  my @headers;
-  $self->each(sub {
-      my ( $field, $value ) = @_;
-      push @headers, $field, "$value"; # force stringification
-  });
+  $header->flatten(0);
+  # => ( 'Set-Cookie' => ['cookie1', 'cookie2'], ... )
 
-This method can be used to generate L<PSGI>-compatible header array references:
+This method can be used to generate L<PSGI>-compatible header array
+references. For example,
 
-  my $status_code = $header->delete( 'Status' ) || '200 OK';
-  $status_code =~ s/\D*$//;
+  use parent 'CGI';
+  use CGI::Header;
 
-  $header->nph( 0 ); # removes the Server header
-  my @headers = $header->flatten;
+  sub psgi_header {
+      my $self   = shift;
+      my $header = CGI::Header->new(@_)->rehash;
+
+      my $status = $header->delete('Status') || '200 OK';
+      $status =~ s/\D*$//;
+
+      $status, [ $header->flatten ];
+  }
+
+Strictly speaking, you have to check C<charset()> attribute of CGI.pm.
+In addition, if C<< $header->nph >> is true,
+C<< $header->flatten >> will return the Server header
+which C<psgi_header()> shouldn't return.
+Those implementations are beyond the scope of this document ;)
 
 See also L<CGI::Emulate::PSGI>, L<CGI::PSGI>.
-
 
 =item $header->as_string
 
@@ -810,14 +836,6 @@ Above methods are aliased as follows:
   SCALAR  -> !is_empty
 
 See also L<perltie>.
-
-NOTE: C<FIRSTKEY()> and C<NEXTKEY()> aren't implemented,
-and so you can't iterate through the tied hash.
-
-  # doesn't work
-  keys %header;
-  values %header;
-  each %header;
 
 =head1 LIMITATIONS
 
