@@ -28,17 +28,30 @@ subtest 'a CGI::Cookie object' => sub {
     is $header->header->{-cookie}, $cookie1;
     is $header{Set_Cookie}, $cookie1; 
     ok exists $header{Set_Cookie};
-    is delete $header{Set_Cookie}, 'foo=bar; path=/';
+    is_deeply [ each %header ], [ 'Set-Cookie', $cookie1 ];
+    is delete $header{Set_Cookie}, $cookie1;
     is_deeply $header->header, {};
 };
 
 subtest 'CGI::Cookie objects' => sub {
-    my $header = tie my %header, 'CGI::Header';
-    $header{Set_Cookie} = [ $cookie1, $cookie2 ];
-    is_deeply $header->header, { -cookie => [ $cookie1, $cookie2 ] };
-    is $header{Set_Cookie}, $header->header->{-cookie};
+    my @cookies = ( $cookie1, $cookie2 );
+    my $header  = tie my %header, 'CGI::Header';
+
+    $header{Set_Cookie} = \@cookies;
+    is_deeply $header->header, { -cookie => \@cookies };
+    is $header{Set_Cookie}, \@cookies;
     ok exists $header{Set_Cookie};
-    is_deeply delete $header{Set_Cookie}, [ $cookie1, $cookie2 ];
+
+    is_deeply [ each %header ], [ 'Set-Cookie', \@cookies ];
+
+    my @headers;
+    $header->each(sub { push @headers, @_ });
+    is_deeply [ @headers[0..3] ], [
+        'Set-Cookie', $cookie1,
+        'Set-Cookie', $cookie2,
+    ];
+
+    is_deeply delete $header{Set_Cookie}, \@cookies;
     is_deeply $header->header, {};
 };
 
